--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,11 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  justify-content: center;
+  margin-top: 10%;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #1E88E5; /* Azul Brillante */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,15 +15,48 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+body {
+  background-color: #FBFCFC;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card {
+  text-align: left;
+  margin-top: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.btn-favorites {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  color: white;
+  background-color: #FF6B6B; 
+  border-color: #d02f2f; 
+  font-size: 18px;
+  font-weight: bold;
+  padding: 10px 20px;
+  border-radius: 5px;
+  z-index: 999;
+}
+
+.btn-favorites:hover, .btn-search:hover {
+  background-color: #FF4D4D;
+  border-color: #d02f2f; 
+}
+
+.btn-search {
+  background-color: #FF6B6B; 
+  border-color: #d02f2f; 
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 10px 20px;
+  border-radius: 5px;
+  height: 100%;
+  margin-left: -1px; 
+}
+
+.FormControl {
+  border-radius: 5px;
+  height: calc(2.25rem + 2px);
 }
